apport (0.131) UNRELEASED; urgency=low

  * bin/apportcheckresume, bin/kernel_oops, cli/apport-cli, gtk/apport-gtk,
    gtk/apport-gtk.glade, qt4/apport-qt: generalised the KernelOops
    dialog and handling to allow suspend and hibernate failures present
    more accurate reasons for the report.  Also commonises all messages
    in the three implementations to simplify internationalisation.

 -- Andy Whitcroft <apw@canonical.com>  Fri, 13 Feb 2009 12:35:16 +0000

apport (0.130) jaunty; urgency=low

  [ Martin Pitt ]
  * bin/kernel_crashdump: Don't crash if vmcore.log does not exist.
  * crashdb_impl/launchpad.py: Tag bugs with the architecture they are
    being reported on.
  * bin/crash-digger: Revert catching "database is locked" errors
    during consolidation, since it just hides more fundamental errors.
  * apport/crashdb_impl/memory.py: Improve docstrings of test suite.
  * bin/apport-retrace: Do not try to install -dbgsym packages with
    nonmatching versions, unless --unpack-only is used. Thanks to
    hggdh for the initial patch! (LP: #309208)

  [ Andy Whitcroft ]
  * bin/apportcheckresume: modify the oops title and thereby the launchpad
    bug title to say suspend or hibernate.
  * bin/apportcheckresume: modify the tags to bin/apportcheckresume:
    modify the oops title and thereby the launchpad be resume+suspend or
    resume+hibernate as appropriate.
  * bin/apportcheckresume: include any non-free modules in the bug title.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 12 Feb 2009 22:09:35 +0100

apport (0.129) jaunty; urgency=low

  * bin/apport-retrace: Log broken reports.
  * bin/apport-retrace: Do not mark bugs as invalid after they are
    already marked as a duplicate, since that does not work in
    Launchpad.
  * debian/local/ubuntu-fat-chroot: Symlink /target -> /, to work
    for crashes which appear in /target during installation.
  * bin/apport: Move argv length/usage help before lock check, so that