@@ -1,12 +1,16 @@
 apport (0.131) UNRELEASED; urgency=low
 
+  [ Andy Whitcroft ]
   * bin/apportcheckresume, bin/kernel_oops, cli/apport-cli, gtk/apport-gtk,
     gtk/apport-gtk.glade, qt4/apport-qt: generalised the KernelOops
     dialog and handling to allow suspend and hibernate failures present
     more accurate reasons for the report.  Also commonises all messages
     in the three implementations to simplify internationalisation.
 
- -- Andy Whitcroft <apw@canonical.com>  Fri, 13 Feb 2009 12:35:16 +0000
+  [ Martin Pitt ]
+  * po/Makefile: Fix merge-po rule to actually work again.
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 16 Feb 2009 19:21:57 +0100
 
 apport (0.130) jaunty; urgency=low
 
